# eco_restoration_shard

./: .env  .envrc  .gitignore  Artifactline-Kknowledge-Eecoimpact-Rriskofharm-Rat.csv  Cargo.toml  ECOSAFETY.md  README.md  eco-ci-build.sh  table-1f8c367d-ffec-4698-ba6b-37973acc6f15 (1).csv  table-1f8c367d-ffec-4698-ba6b-37973acc6f15.csv  table-a59dd9fa-18f1-42ee-8cfb-a9a2ca05344c.csv  table-b0e33e53-1daa-4b67-8690-a83f2775112b (1).csv  table-b0e33e53-1daa-4b67-8690-a83f2775112b.csv
.github/workflows/: eco-ci-validate.yml  response_shard_check.yml
.tools/scaffold/: New-CodeCommandPlaceholders.ps1
.tools/vfs/: setup_mnt_oss.sh
aletheionermecosafety/: ALE-ERM-CYBOQUATIC-FUNCTION-FAMILIES-001.aln
aln/: ECOSAFETY-CYBOQUATIC-NODE-001.aln  nucleus_pulposus_shear_fz.v1.aln
aln/corridors/: corridors.ecosafety.carbon_biodiversity.v1.aln
alnspecs/: ecosafety.corridors.v2.aln  ecosafety.riskvector.v2.aln
bee-safety-kernel/: Cargo.toml
bee-safety-kernel/src/: lib.rs
chat_shards_core/: Cargo.toml
chat_shards_core/src/: lib.rs
corridor-edge-device/: Cargo.toml
corridor-edge-device/src/: lib.rs
crates/EcoNetTerminalAgent/: Cargo.toml
crates/agent_interface/: Cargo.toml
crates/agent_interface/src/: lib.rs
crates/build_scheduler/: Cargo.toml
crates/build_scheduler/src/: lib.rs
crates/chat_guard_core/: Cargo.toml
crates/cyboquatic-eco-planes/: Cargo.toml
crates/cyboquatic-ecosafety-core/: Cargo.toml
crates/cyboquatic-energy-mass/: Cargo.toml
crates/cyboquatic-fog-routing/: Cargo.toml
crates/cyboquatic-materials/: Cargo.toml
crates/eco-ci-validate/: Cargo.toml
crates/eco-ci-validate/src/: main.rs
crates/eco_shards/: Cargo.toml
crates/econet-material-cybo/: Cargo.toml
crates/ecosafety-cli/: Cargo.toml
crates/ecosafety-core/: Cargo.toml  build.rs
crates/ecosafety-core-canal/: Cargo.toml
crates/ecosafety-core/src/: corridor.rs  lib.rs  qpudatashard.rs  residual.rs  types.rs
crates/ecosafety-core/src/actuation/: safestep.rs
crates/ecosafety-core/src/compute/: dual_profile_vt.rs
crates/ecosafety-core/src/governance/: deploy_decision.rs  node_placement.rs
crates/ecosafety-core/src/grammar/: aln_parser.rs
crates/ecosafety-core/src/normalization/: corridor.rs
crates/ecosafety-core/src/provenance/: qpu_shard.rs
crates/ecosafety-core/src/types/: risk_vector.rs
crates/ecosafety-ffi-lua/: Cargo.toml
crates/ecosafety-macros/: Cargo.toml
crates/ecosafety_core/: Cargo.toml
crates/fog_ecobiome_kernel/: Cargo.toml
crates/ker_core/: Cargo.toml
crates/ker_spine/: Cargo.toml
crates/opt-cyboquatic-fog-router/: Cargo.toml
crates/oss_vfs/: Cargo.toml
crates/oss_vfs/src/: lib.rs
crates/response_shard_core/: Cargo.toml
crates/response_shard_core/src/: lib.rs
crates/storage_shards/: Cargo.toml
crates/storage_shards/src/: lib.rs
crates/vehicle-filter-2026/: Cargo.toml
cyboquatic-safety-kernel/: Cargo.toml
cyboquatic-safety-kernel/src/: lib.rs
cyboquatic_c_kernel/: Cargo.toml
cyboquatic_c_kernel/src/: cyboquatic_kernel.cpp  lib.rs
cyboquatic_kernel/: Cargo.toml
cyboquatic_kernel/include/: cyboquatic_kernel.hpp
cyboquatic_kernel/src/: lib.rs
docs/: 100-research-questions.md  AI_CHAT_ENGAGEMENT_TASKS.md  ECOSAFETYSPINE.md
docs/research/: coder_exabyte_scale_research_questions_part2.md
ecosafety-android/: Cargo.toml
ecosafety-android/src/: lib.rs
ecosafety-core/src/: risk.cpp
ecosafety-ffi/: Cargo.toml
ecosafety-ffi/include/: ecosafety_ffi.h
ecosafety-ffi/src/: ecosafety_ffi.cpp  lib.rs
ecosafety-native/: Cargo.toml
ecosafety-native/src/: lib.rs
ecosafety-specs/: Cargo.toml
ecosafety-specs/grammar/: CorridorBands2026v1.aln  DeployDecisionGrammar2026v1.aln  EcoSafetyGrammar2026v1.aln  SafeStepGrammar2026v1.aln
ecosafety-specs/src/: lib.rs
edge/lua/: cyboquatic_node_step.lua
kernels/src/: lib.rs
mar_pilot_sat_cell/: Cargo.toml
nanoswarm-mcu/: Cargo.toml
nanoswarm-mcu/src/: lib.rs
native/: Cargo.toml
native/src/: lib.rs
opt-cyboquatic-fog-router/: Cargo.toml
opt-cyboquatic-fog-router/src/: lib.rs
qpudata-rcalib-core/src/: rcalib.cpp  rsigma.cpp
qpudatashards/: README.md  planesCarbonMaterialsBiodiversityPhoenix2026v1.csv  qpudatashardsDataTrustAndPlanesPhoenix2026v1.md
qpudatashards/appliance/: AppliancePdssInvariants2026v1.aln
qpudatashards/audits/: EcologicalTrapRiskAudit_Phoenix2026v1.csv
qpudatashards/ledgers/: CarbonScopesLedger2027v1.csv  RenewableEnergyLedger2027v1.csv
qpudatashards/particles/: CitizenEcoObservations2026v1.csv  CitizenEcoObservations2026v1.header.csv  CitizenObservation.aln  ConservationUpliftLedger.aln  ConservationUpliftLedger2027v1.csv  (+21 more)
response_shard/: Cargo.toml
schemas/: FOGRoutingDecision2026v2.aln  ResponseShardEco2026v1.aln  StorageAndComputeNodes2026v1.aln
scripts/: cyboquatic_energy_probe.lua  eco-ci-build.sh
services/: Cargo.toml
specs/: Cargo.toml  EnergyBankModuleEcosafety2026v1.aln
tools/: setup-rust-on-mnt-oss.sh
vehicle-filter-2026/: Cargo.toml
(+80 files in other folders)
