[workspace]
members = [
    "response_shard",
    "mar_pilot_sat_cell",
    "crates/cyboquatic-ecosafety-core",
    "crates/cyboquatic-fog-routing",
    "crates/cyboquatic-energy-mass",
    "crates/cyboquatic-materials",
    "crates/econet-material-cybo",
    "crates/ker_core",
    "crates/ker_spine",
    "crates/ecosafety-core",
    "crates/ecosafety-macros",
    "crates/ecosafety-ffi-lua",
    "crates/chat_guard_core",
    "crates/fog_ecobiome_kernel",
    "crates/opt-cyboquatic-fog-router",
    "crates/ecosafety-core-canal",
    "crates/EcoNetTerminalAgent",
    "crates/ecosafety-cli",
    "crates/cyboquatic-eco-planes",
    "chat_shards_core",
    # New crates for exabyte VFS and AI‑Chat engagement
    "crates/oss_vfs",
    "crates/response_shard_core",
    "crates/agent_interface",
    "crates/storage_shards",
    "crates/build_scheduler",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.0"
authors = ["Bostrom Ecosafety Stack"]
description = "Eco‑restoration shard repository with exabyte VFS, AI‑Chat interface, and KER governance."

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }

# Internal crate aliases
cyboquatic-ecosafety-core = { path = "crates/cyboquatic-ecosafety-core" }
response_shard_core = { path = "crates/response_shard_core" }
oss_vfs = { path = "crates/oss_vfs" }
agent_interface = { path = "crates/agent_interface" }
