[package]
name = "build_scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Compute node ecosafety scheduler for Rust builds and agent workloads."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
cyboquatic-ecosafety-core.workspace = true
storage_shards.workspace = true
