# Filename: crates/eco-ci-validate/Cargo.toml
[package]
name = "eco-ci-validate"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
aln = "0.1"                  # replace with your ALN crate name if different
ecosafety_core = { path = "../ecosafety_core" }
eco_shards = { path = "../eco_shards" }

[dev-dependencies]
 anyhow = "1"
