[package]
name = "oss_vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Read‑only exabyte VFS abstraction for /mnt/oss with shard‑first pattern and KER scoring."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
csv.workspace = true
chrono.workspace = true
hex.workspace = true
sha2.workspace = true
tracing.workspace = true
cyboquatic-ecosafety-core.workspace = true
