[package]
name = "response_shard_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ResponseShard types, ALN schema helpers, and CSV emission for AI‑Chat turns."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
csv.workspace = true
chrono.workspace = true
hex.workspace = true
sha2.workspace = true
cyboquatic-ecosafety-core.workspace = true
