[package]
name = "storage_shards"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "StorageNodeShard schemas and writers for exabyte capacity planning with ecosafety scoring."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
csv.workspace = true
chrono.workspace = true
cyboquatic-ecosafety-core.workspace = true
